# HsMuPDF

./: .gitignore  .travis.meta.yml  .travis.yml  ChangeLog.md  HsMuPDF.cabal  stack.yaml
src/MuPDF/Pdf/: Document.hs  Internal.hs
test/: Test.hs
