name:                HsMuPDF
version:             0.0.0.0
synopsis:            MuPDF binding for Haskell
-- description:
homepage:            https://github.com/vonavi/HsMuPDF#readme
license:             GPL-3
license-file:        LICENSE
author:              Vladimir Ivanov
maintainer:          ivvl82@gmail.com
copyright:           2018 Vladimir Ivanov
-- category:
build-type:          Simple
cabal-version:       >=1.10
data-files:          adobexmlformssamples.pdf
data-dir:            data
extra-source-files:  ChangeLog.md

library
  pkgconfig-depends:   mupdf
  extra-libraries:     freetype, jbig2dec, jpeg, openjp2, z
  exposed-modules:     MuPDF.Pdf.Document
  other-modules:       MuPDF.Pdf.Internal
  ghc-options:         -Wall -funbox-strict-fields
  build-depends:       base       >=4.9 && <5
                     , bytestring >=0.10
                     , containers >=0.5
                     , inline-c   >=0.6
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test-HsMuPDF
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  other-modules:       Paths_HsMuPDF
  ghc-options:         -Wall -threaded -funbox-strict-fields
  build-depends:       HsMuPDF
                     , base        >=4.9 && <5
                     , bytestring  >=0.10
                     , tasty       >=1.1
                     , tasty-hunit >=0.10
  hs-source-dirs:      test
  default-language:    Haskell2010
